welcome.lessons.welcome.variables.Variables.scala.error
Variables:8: error: '(' expected but identifier found.
while dejaFait != nbPas
      ^